--- a/WebApplication1/Views/Account/Login.cshtml
+++ b/WebApplication1/Views/Account/Login.cshtml
@@ -2,7 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 @model WebApplication1.ViewModels.LoginViewModel
+@if (User.Identity.IsAuthenticated)
+{
 
+    Layout = "_Layout";
+
+}
+else
+{
+    Layout = null;
+}
+<head>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="~/css/site.css" />
+    </head>
 
 <h2>Вход в приложение</h2>
 <form method="post" asp-controller="Account" asp-action="Login"
@@ -26,3 +39,16 @@
         <input type="submit" value="Войти" />
     </div>
 </form>
+<body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
+@section Styles {
+    <style>
+        .container {
+            width: 760px;
+        }
+    </style>
+}
